	current directory. Patch supplied by Ed Avis and fixes RT #45246.

	* Temp.pm: Defer unlinking tempfiles if initial unlink fails
	instad of croaking; fixes problems on NFS (RT #82720)

	* Temp.pm: Allow leading template to new() for consistency with
	newdir()

	* Temp.pm: Calling tempfile or tempdir as a class method now
	produce a more useful fatal error message

2009-06-28  Tim Jenness <tjenness@cpan.org>

	---- Release V0.22 CPAN ----

	* t/fork.t: Fix portability problems in fork.t and remove left
	over file (RT #41557)

2008-11-12  Tim Jenness  <tjenness@cpan.org>

	---- Release V0.21 CPAN ----

	* Temp.pm: Clean out $FILES_CREATED_BY_OBJECT when the destructor
	runs. Otherwise memory does not get returned. Really bad idea for 
	daemons. (Thanks to Maxime Therreault RT #37621)
	
	* Temp.pm: Integrate patches from bleadperl for cygwin. (thanks to 
	Jari Aalto RT #36376)

	* t/seekable.t: seekable test was failing on perl 5.6.0 so we now
	skip the specific test. (thanks to Zefram)

	* Temp.pm: Remove the test on the parent directory to see if a file
	can be written. This will be found out anyway as soon as the file open
	is attempted. AFS systems may fail a -w test but still allow a file to
	be created. (thanks to Christopher Ellison)

	* Temp.pm: Put an eval around rmtree. Some versions of rmtree croak
	if you attempt to remove a directory that you are inside. (debian bug
	479317 and RT #35779).
	
2008-03-15 Tim Jenness <tjenness@cpan.org>

	* Temp.pm: Localize special variables in END blocks and destructors.
	
2007-12-20  Tim Jenness  <tjenness@cpan.org>

	---- Release V0.20 CPAN ----
	
	* t/lock.t: Fix logic problem with BEGIN block that was causing grief on some
	systems (thanks to Steve Peters for patch).

2007-11-19  Tim Jenness  <tjenness@cpan.org>

	----- Release V0.19 CPAN -----
	
	* Temp.pm (tempfile): Add EXLOCK option which can be used to disable O_EXLOCK

	* t/lock.t: Test ability to disable O_EXLOCK
	
2007-11-16  Tim Jenness  <tjenness@cpan.org>
