@@ -22,6 +22,9 @@ XXXX-XX-XX  Tim Jenness <tjenness@cpan.org>
 	* Temp.pm: Calling tempfile or tempdir as a class method now
 	produce a more useful fatal error message
 
+	* Temp.pm: new/newdir/tempfile/tempdir now all allow either
+	a leading template argument or a TEMPLATE option
+
 2009-06-28  Tim Jenness <tjenness@cpan.org>
 
 	---- Release V0.22 CPAN ----
